# pyiso4

./: .bumpversion.cfg  .travis.yml  CONTRIBUTING.md  LICENSE  LTWA_20170914-modified.csv  LTWA_20170914.csv  MANIFEST.in  Makefile  README.md  failed_tests.csv  main.py  pyproject.toml  release_it.sh  requirements.in  requirements.txt  setup.py  stopwords.txt  tests.csv  tests.py
.github/workflows/: publish.yml  tests.yml
pyiso4/: LTWA_20210702.csv  __init__.py  lexer.py  ltwa.py  normalize_string.py  prefix_tree.py  script.py
tests/: failed_tests.csv  failed_tests.tsv  tests.csv  tests.py  tests.tsv
